--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,41 +9,38 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      NODE_ENV: test
+      NODE_ENV: ci
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: atlas_ci
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
     - uses: actions/checkout@v2
-    - name: Setup PostgreSQL
-      # You may pin to the exact commit or the version.
-      # uses: Harmon758/postgresql-action@0be19fa37850b22cb4c9bbf28a03abbf44abd863
-      uses: Harmon758/postgresql-action@v1.0.0
-      with:
-        # Version of PostgreSQL to use
-        postgresql version: # optional, default is latest
-        # POSTGRES_DB - name for the default database that is created
-        postgresql db: # optional, default is 
-        # POSTGRES_USER - create the specified user with superuser power
-        postgresql user: # optional, default is 
-        # POSTGRES_PASSWORD - superuser password
-        postgresql password: # optional, default is 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm install wait-on pm2 mocha mochawesome-merge mochawesome-report-generator
-    - run: npx sequelize-cli db:create
+    - run: npm install cypress-mochawesome-reporter
     - run: npx sequelize-cli db:migrate
-    - run: npx pm2 start npm -- start
-    - run: npx wait-on http://localhost:5000
-    - run: npx cypress run --reporter mochawesome --reporter-options "reportDir=cypress/report/mochawesome-report,overwrite=false,html=false,json=true,timestamp=mmddyyyy_HHMMss"
-    - run: npx mochawesome-merge cypress/report/mochawesome-report/mochawesome*.json > cypress/report/mochawesome.json
-    - run: npx pm2 kill
+    - name: Cypress tests
+      uses: cypress-io/github-action@v2
+      with:
+        start: npm start
     - run: npm test
-    
     
