--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "cypress": "^8.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
@@ -21,5 +20,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "cypress": "^8.3.0"
   }
 }
