--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "cypress": "^8.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-busboy": "^8.0.0",
+    "express-fileupload": "^1.2.1",
     "jasmine": "^3.8.0",
     "mochawesome": "^6.2.2",
     "nodemon": "^2.0.12",
+    "os": "^0.1.2",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
