--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
   },
   "devDependencies": {
     "cypress": "^8.3.0",
-    "jasmine": "^3.9.0"
+    "jasmine": "^3.9.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
