--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "mochawesome": "^6.2.2",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
@@ -23,11 +24,11 @@
   },
   "devDependencies": {
     "cypress": "^8.3.0",
-    "jasmine": "^3.9.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "jasmine": "^3.9.0"
   }
 }
