--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "cypress": "^8.3.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "jasmine": "^3.9.0"
   }
 }
