removed --fix tag for eslint in CI and moved the eslint step earlier

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,8 +37,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm install cypress-mochawesome-reporter
+    - run: npx eslint .
     - run: npx sequelize-cli db:migrate
-    - run: npx eslint . --fix
     - name: Cypress tests
       uses: cypress-io/github-action@v2
       with:
