--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "method-override": "^3.0.0",
     "mochawesome": "^6.2.2",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
